--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,6 @@
+/*这是 create-react-app 中的一种让 css在各个浏览器中的默认样式统一*/
+@import-noramlize;
+$red: #f00;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +9,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+*{
+  color: $red !important;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
