--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,7 @@
 /*这是 create-react-app 中的一种让 css在各个浏览器中的默认样式统一*/
 @import-noramlize;
 @import "xxx/a";
-$red: #f00;
+$red: white;
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
